--- a/public/perfil_administrador.ejs
+++ b/public/perfil_administrador.ejs
@@ -16,15 +16,15 @@
 
 <body>
 
-    <!-- HEADER -->
-    <div class="header">
+       <!-- HEADER -->
+       <div class="header">
         <div class="container_menu">
-            <a href="index.html">
+            <a href="/">
                 <img src="logo/Logo-Aquela-da-Lactose-branco.png" alt="Logo-Aquela-da-Lactose" width="180px">
             </a>
             <ul class="navbar">
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         Início
                     </a>
                 </li>
@@ -32,34 +32,34 @@
                     Conteúdo
                     <ul>
                         <li>
-                            <a href="tudo-sobre-lactose.html">
+                            <a href="/tudo-sobre-lactose">
                                 Tudo sobre Lactose
                             </a>
                         </li>
                         <li>
-                            <a href="receitas.html">
+                            <a href="/receitas">
                                 Receitas
                             </a>
                         </li>
                         <li>
-                            <a href="dicas.html">
+                            <a href="/dicas">
                                 Dicas
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="contato.html">
+                    <a href="/contato">
                         Contato
                     </a>
                 </li>
                 <li>
-                    <a href="login.html">
+                    <a href="/login">
                         Login
                     </a>
                 </li>
                 <li>
-                    <a href="cadastro.html">
+                    <a href="/cadastro">
                         Cadastrar
                     </a>
                 </li>
