--- a/public/receitas.ejs
+++ b/public/receitas.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tudo Sobre Lactose | Aquela da Lactose</title>
+    <title>Receitas | Aquela da Lactose</title>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -13,50 +13,50 @@
 
 <body>
 
-    <!-- HEADER -->
-    <div class="header">
+       <!-- HEADER -->
+       <div class="header">
         <div class="container_menu">
-            <a href="index.html">
+            <a href="/">
                 <img src="logo/Logo-Aquela-da-Lactose-branco.png" alt="Logo-Aquela-da-Lactose" width="180px">
             </a>
             <ul class="navbar">
                 <li>
-                    <a href="index.html">
+                    <a href="/">
                         Início
                     </a>
                 </li>
                 <li class="submenu">
                     Conteúdo
                     <ul>
-                        <li class="agora">
-                            <a href="tudo-sobre-lactose.html">
+                        <li>
+                            <a href="/tudo-sobre-lactose">
                                 Tudo sobre Lactose
                             </a>
                         </li>
-                        <li>
-                            <a href="receitas.html">
+                        <li class="agora">
+                            <a href="/receitas">
                                 Receitas
                             </a>
                         </li>
                         <li>
-                            <a href="dicas.html">
+                            <a href="/dicas">
                                 Dicas
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="contato.html">
+                    <a href="/contato">
                         Contato
                     </a>
                 </li>
                 <li>
-                    <a href="login.html">
+                    <a href="/login">
                         Login
                     </a>
                 </li>
                 <li>
-                    <a href="cadastro.html">
+                    <a href="/cadastro">
                         Cadastrar
                     </a>
                 </li>
