--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -65,7 +65,7 @@ body {
     font-size: 14px;
 }
 
-.data_nascimento {
+.idade_cadastro {
     font-family: montserrat;
     width: 100px;
     height: 20px;
