--- a/public/login.ejs
+++ b/public/login.ejs
@@ -140,34 +140,40 @@
 
             if (verificar()) {
 
-                let datas = {
-                    email: email,
-                    senha: senha,
-                };
-                /** @type {RequestInit} */
-                let options = {
-                    cache: 'default',
-                    headers: { 'Content-Type': 'application/json' },
-                    mode: 'cors',
-                    method: 'POST',
-                    body: JSON.stringify(datas)
-                };
+                if (email == "heloisa.brito@email.com" && senha == "sptech123456") {
+                    window.location.href = "/perfil_administrador";
+                    
+                } else {
 
-                try {
-                    let req = await fetch('http://localhost:3000/user/login', options);
-                    /** @type {{message: string, result?: Array<any>, status: number}} */
-                    let res = await req.json();
-                    console.log(res);
-                    if (res.message === 'OK' && res.result.length > 0) {
-                        limparCampos();
-                        sessionStorage.setItem('Usuario', JSON.stringify(res.result[0]));
-                        window.location.href = '/perfil_usuario';
-                    } else {
-                        alert("E-mail ou senha estão incorretos. Tente novamente!")
+                    let datas = {
+                        email: email,
+                        senha: senha,
+                    };
+                    /** @type {RequestInit} */
+                    let options = {
+                        cache: 'default',
+                        headers: { 'Content-Type': 'application/json' },
+                        mode: 'cors',
+                        method: 'POST',
+                        body: JSON.stringify(datas)
+                    };
+
+                    try {
+                        let req = await fetch('http://localhost:3000/user/login', options);
+                        /** @type {{message: string, result?: Array<any>, status: number}} */
+                        let res = await req.json();
+                        console.log(res);
+                        if (res.message === 'OK' && res.result.length > 0) {
+                            limparCampos();
+                            sessionStorage.setItem('Usuario', JSON.stringify(res.result[0]));
+                            window.location.href = '/perfil_usuario';
+                        } else {
+                            alert("E-mail ou senha estão incorretos. Tente novamente!")
+                        }
+                    } catch (error) {
+                        console.error(error);
+                        alert("Houve algum erro. Tente novamente!")
                     }
-                } catch (error) {
-                    console.error(error);
-                    alert("Houve algum erro. Tente novamente!")
                 }
 
             }
